# backend-api

./: .dockerignore  .env  .env.example  .gitignore  Cargo.toml  Dockerfile  README.md  Rocket.toml  diesel.toml  docker-compose.yml  flake.nix
api/: Cargo.toml
api/src/: cors.rs  email.rs  lib.rs  models.rs  req_logger.rs
api/src/auth/: crypto.rs  guard.rs  mod.rs
api/src/routes/: auth.rs  entries.rs  google_auth.rs  misc.rs  mod.rs  permissions.rs  person.rs
db/: Cargo.toml
db/migrations/2025-05-05-105742_create_person/: up.sql
db/migrations/2025-05-05-105758_create_entry/: down.sql  up.sql
db/migrations/2025-05-05-105808_create_permission/: up.sql
db/migrations/2025-05-23-152359_make_password_optional/: down.sql  up.sql
db/migrations/2025-05-23-152444_create_password_reset_tokens/: down.sql  up.sql
db/migrations/2025-05-23-162044_add_google_id_to_person/: down.sql  up.sql
db/src/: crypto.rs  interactions.rs  lib.rs  models.rs  schema.rs
db/src/date/: mod.rs
db/src/interactions/: entries.rs  mod.rs  password_reset.rs  permissions.rs  person.rs
entity/src/: lib.rs  prelude.rs
migration/: Cargo.toml
migration/src/: lib.rs  m20250503_180012_create_table.rs
src/: conf.rs  db.rs  main.rs  mqtt.rs
