[package]
name = "quick-start"
version = "0.1.0"
edition = "2021"
license = "MIT"

[workspace]
members = [".", "entity", "migration"]

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
rumqttc = "0.24.0"
serde = { version = "1.0", features = ["derive"] }
rocket = "0.5.1"
sea-orm = { version = "1.1.10", features = [
    "sqlx-postgres",
    "runtime-tokio-native-tls",
    "macros",
] }
entity = { path = "entity" }
migration = { path = "migration" }