[package]
name = "synnapse-api"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["api", "db"]

[dependencies]
api = { path = "./api" }
clap = { version = "4.5.37", features = ["derive"] }
db = { path = "./db" }
diesel = { version = "2.2.0", features = [
    "sqlite",
    "returning_clauses_for_sqlite_3_35",
] }
tokio = "1.44.2"
