[package]
name = "synnapse-db-api-cli"
version = "0.1.0"
edition = "2024"

[workspace]
members = ["api", "db"]

[dependencies]
fstdout-logger = "0.1.0"
log = "0.4"
api = { path = "./api" }
clap = { version = "4.5.38", features = ["derive"] }
db = { path = "./db" }
tokio = "1.45.0"
dotenv = "0.15.0"

[profile.dev]
opt-level = 0

[profile.release]
opt-level = 3
lto = true
strip = true
panic = "abort"
