[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
db = { path = "../db" }
rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
