[package]
name = "api"
version = "0.1.0"
edition = "2024"

[dependencies]
chrono = "0.4.41"
db = { path = "../db" }
log = "0.4"
once_cell = "1.21.3"
rocket = { version = "0.5.1", features = ["json"] }
rocket_okapi = { version = "0.9.0", features = ["swagger", "rapidoc"] }
schemars = "0.8.22"
serde = { version = "1.0.219", features = ["derive"] }
serde_json = "1.0.140"
uuid = { version = "1", features = ["v4"] }
